--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "require": {
     "php": "^8.1",
+    "elibyy/tcpdf-laravel": "^10.0",
     "guzzlehttp/guzzle": "^7.2",
     "hashids/hashids": "^5.0",
     "laravel/framework": "^10.10",
