--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bootstrap-vue": "^2.23.1",
     "compressorjs": "^1.2.1",
     "hashids": "^2.3.0",
+    "ismobilejs": "^1.1.1",
     "jquery": "3.4.1",
     "lodash": "^4.17.21",
     "maska": "^2.1.10",
