--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "vue-router": "^4.2.4",
     "vue-slimscroll": "^1.0.1",
     "vue-tippy": "v4",
+    "vue3-datepicker": "^0.4.0",
     "ziggy-js": "^1.6.0"
   }
 }
