--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "compressorjs": "^1.2.1",
     "echarts": "^5.4.3",
     "element-plus": "^2.5.2",
+    "flickity": "2.2.1",
     "hashids": "^2.3.0",
     "ismobilejs": "^1.1.1",
     "jquery": "3.4.1",
