--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "commonjs",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/kbm/build/",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix resources/js",
     "format": "prettier .  --write",
     "format-php": "prettier resources/views/* --write"
